fix dashboard categories wrapping

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -845,6 +845,10 @@ the form-control fails to do that so we do the border ourselves */
     color: #856404 !important;
 }
 
+.lh-150 {
+    line-height: 150%;
+}
+
 .togglable-section-title {
     color: $medium;
     font-size: 100%;
